# ServerClient

./: .gitignore
Client/: CMakeLists.txt
Client/src/: CMakeLists.txt  client.cpp  client.hpp  main.cpp
Server/: CMakeLists.txt
Server/src/: CMakeLists.txt  main.cpp  server.cpp  server.hpp
